[package]
name = "rustetris"
version = "0.1.0"
authors = ["Arttu Kangas <ttu91@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pixels = { git = "https://github.com/parasyte/pixels", rev = "11c5961" }
winit = "0.24"
winit_input_helper = "0.9"
rand = "0.8.3"